--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: cpp
+language: generic
 os:
 - osx
 matrix:
@@ -12,11 +12,7 @@ matrix:
           sources: &sources
             - llvm-toolchain-precise
             - ubuntu-toolchain-r-test
-            compiler:  
-            - clang
-            - gcc
 script:
-- scons
 - mkdir build
 - cd build
 - cmake .. && make
